<resources>
    <string name="app_name">Bioprofile App</string>
    <string name="textview">TextView</string>
    <string name="random_attribute">random attribute</string>
    <string name="oluwamayowa_oluwagbade">Oluwamayowa Oluwagbade</string>
    <string name="track_android">Track : Android</string>
    <string name="track_level_1">Track Level : 1</string>
    <string name="quick_learner_reslient_sometimes"><![CDATA[quick learner, reslient & sometimes]]></string>
    <string name="todo">TODO</string>
    <string name="dedicated">dedicated</string>
    <string name="bio_quick_learner_resilient_sometimes"><![CDATA[Bio: Quick learner, resilient & sometimes]]></string>
</resources>