<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010620"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/oluwamayowa_oluwagbade"
        android:textColor="#D500F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/biostory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="134dp"
        android:layout_marginBottom="56dp"
        android:text="@string/bio_quick_learner_resilient_sometimes"
        android:textColor="#FDFCFD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilepic"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="casual"
        android:text="@string/track_android"
        android:textColor="#CBF0F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilepic"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/tracklevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="casual"
        android:text="@string/track_level_1"
        android:textColor="#F9FAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toEndOf="@+id/track"
        app:layout_constraintTop_toBottomOf="@+id/profilepic"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/randomstory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="134dp"
        android:layout_marginBottom="56dp"
        android:text="@string/dedicated"
        android:textColor="#BCECF3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toEndOf="@+id/biostory"
        app:layout_constraintTop_toBottomOf="@+id/profilepic"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/rdmbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="149dp"
        android:text="@string/random_attribute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biostory"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/profilepic"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/fullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/profilepic" />

</androidx.constraintlayout.widget.ConstraintLayout>